--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -21,7 +21,8 @@
         {% block body %}
         <div class="page">
             <div class="header" role="banner">
-                
+                <h1 class="header__title">Myles' Photos</h1>
+                {% block breadcrumb %}{% endblock %}
             </div>
             <div class="main" role="main">
                 {% block content %}{% endblock %}
